--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -1,4 +1,16 @@
 <center>
+	<table width="950" bgcolor="#fff100" cellpadding="15">
+		<tr>
+			<td>
+				<font size="2" color="#fff100">全品値下げセール中</font>
+				<br>
+				<center>
+					<font size="16" color="#ff0027"><b>今 が チ ャ ン ス ! 期 間 限 定 !!<br>全品値下げセール中!!</b></font>
+				</center>				
+			</td>
+		</tr>
+	</table>
+	<br>
 	<font size="4" color="#ff0027"><b>★ 入札の前に必ずストア情報、自己紹介もお読みください ★ </b></font>
 	<br>　
 	<table width="950" cellpadding="15">
