全品値下げ! 再編集
ヤフオク!のhtml解釈の狂い。

--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -2,7 +2,9 @@
 	<table width="950" bgcolor="#fff100" cellpadding="15">
 		<tr>
 			<td>
+				<center>
 				<font size="2" color="#fff100">全品値下げセール中</font>
+				</center>	
 				<br>
 				<center>
 					<font size="16" color="#ff0027"><b>今 が チ ャ ン ス ! 期 間 限 定 !!<br>全品値下げセール中!!</b></font>
