--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -3,11 +3,10 @@
 		<tr>
 			<td>
 				<center>
-				<font size="2" color="#fff100">全品値下げセール中</font>
+				<font size="0" color="#fff100">期間限定! 値下げセール まもなく終了</font>
 				</center>	
-				<br>
 				<center>
-					<font size="16" color="#ff0027"><b>今 が チ ャ ン ス ! 期 間 限 定 !!<br>全品値下げセール中!!</b></font>
+					<font size="16" color="#ff0027"><b>期間限定! 値下げセール まもなく終了</b></font>
 				</center>				
 			</td>
 		</tr>
