--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -124,3 +124,17 @@
 				</td>
 			</tr>
 		</table>
+
+	<table width="950" cellpadding="15">
+		<tr>
+			<td bgcolor="#f1f0e8">
+<font size="2">
+	2019年10月1日より、消費税率が10％に引き上げられます。<br>
+商品説明文に送料等の税率8％の記載がある場合がございますが、10月1日より新税率が適用となりますこと、ご理解下さいますようお願いします。<br>
+9月中に落札された場合でも10月1日発送分より税率10％が適用となりますこと、予め承知のほどよろしくお願いいたします。
+</font>
+				</td>
+			</tr>
+		</table>
+
+	</center>
