修正依頼 by 高野さん
1文、削除。
蛭間さん、了承済み。

--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -33,8 +33,7 @@
 				<br>
 
 				<font size="2">
-					画像に写っているものが商品や付属品の全てです。<br>
-					※背景にあるもの、撮影時の備品は商品に含まれません。<br>
+					背景にあるもの、撮影時の備品は商品に含まれません。<br>
 					商品の状態は説明欄に記入しておりますが、細かな点など見落としがある場合がございます。<br>
 					画像をご確認の上、お客様のご判断でご入札をお願い致します。<br>
 					<br>
