--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -126,11 +126,13 @@
 
 	<table width="950" cellpadding="15">
 		<tr>
-			<td bgcolor="#f1f0e8">
-<font size="2">
-	2019年10月1日より、消費税率が10％に引き上げられます。<br>
-商品説明文に送料等の税率8％の記載がある場合がございますが、10月1日より新税率が適用となりますこと、ご理解下さいますようお願いします。<br>
-9月中に落札された場合でも10月1日発送分より税率10％が適用となりますこと、予め承知のほどよろしくお願いいたします。
+			<td bgcolor="#99ffff">
+<font size="4">
+<b>取引メッセージや連絡掲示板からの、お支払い完了の報告は不要です。</b><br>
+落札者様のお支払い続きが完了しましたら、自動的に当ストアにお支払い完了メールが届きます。<br>
+落札者様からは取引ナビ等で支払い完了のメッセージは送信なさらないようお願いします。<br>
+メールのチェックが増えるため発送作業に遅れが生じます。<br>
+また、メッセージを送信されましても返答は行いませんので予めご了承下さい。
 </font>
 				</td>
 			</tr>
