年末年始休業日のお知らせ
ヤフオクにバナーを表示して下さい
Inbox
x

蛭間均
25 Dec 2019, 17:31 (15 hours ago)
to me

　　年末年始休業日のお知らせ
2019年12月28日～2020年1月5日まで休業

12月27日午前中までのご入金分は年内発送に努めます。
大型商品は1月7日以降順次発送となります。
休業日中のご落札分の連絡は1月7日より順次行います。
予めご了承下さいますようお願いいたします。

--- a/yahuoku_header.html
+++ b/yahuoku_header.html
@@ -1,4 +1,26 @@
 <center>
+
+	<table width="950" cellpadding="15">
+		<tr>
+			<td bgcolor="#ff0027">
+				
+				<center>
+					<font size="4" color="#ffffff">
+						<b>年末年始休業日のお知らせ<br>2019年12月28日～2020年1月5日まで休業</b>
+					</font>
+				</center>
+
+				<br>
+				<font size="3" color="#ffffff">
+					12月27日午前中までのご入金分は年内発送に努めます。<br>
+					大型商品は1月7日以降順次発送となります。<br>
+					休業日中のご落札分の連絡は1月7日より順次行います。<br>
+					予めご了承下さいますようお願いいたします。
+				</font>
+			</td>
+		</tr>
+	</table>
+	<br>
 	<font size="4" color="#ff0027"><b>★ 入札の前に必ずストア情報、自己紹介もお読みください ★ </b></font>
 	<br>　
 	<table width="950" cellpadding="15">
@@ -124,16 +146,16 @@
 			</tr>
 		</table>
 
-	<table width="950" cellpadding="15">
-		<tr>
-			<td bgcolor="#99ffff">
-<font size="4">
-<b>取引メッセージや連絡掲示板からの、お支払い完了の報告は不要です。</b><br>
-落札者様のお支払い続きが完了しましたら、自動的に当ストアにお支払い完了メールが届きます。<br>
-落札者様からは取引ナビ等で支払い完了のメッセージは送信なさらないようお願いします。<br>
-メールのチェックが増えるため発送作業に遅れが生じます。<br>
-また、メッセージを送信されましても返答は行いませんので予めご了承下さい。
-</font>
+		<table width="950" cellpadding="15">
+			<tr>
+				<td bgcolor="#99ffff">
+					<font size="4">
+						<b>取引メッセージや連絡掲示板からの、お支払い完了の報告は不要です。</b><br>
+						落札者様のお支払い続きが完了しましたら、自動的に当ストアにお支払い完了メールが届きます。<br>
+						落札者様からは取引ナビ等で支払い完了のメッセージは送信なさらないようお願いします。<br>
+						メールのチェックが増えるため発送作業に遅れが生じます。<br>
+						また、メッセージを送信されましても返答は行いませんので予めご了承下さい。
+					</font>
 				</td>
 			</tr>
 		</table>
