ファイル名 修正
information.html

--- a/description_2020-06-25_002.html
+++ b/description_2020-06-25_002.html
@@ -223,12 +223,21 @@
 	メールのチェックが増えるため発送作業に遅れが生じます。<br>
 	また、メッセージを送信されましても返答は行いませんので予めご了承下さい。
 </p>
+<hr>
 <br>
 <p>
-	<font size=4>
-		↓↓ こちらもご覧下さい ↓↓
+	<font color=#ff0033>
+		<b>
+			↓↓ こちらもご覧下さい ↓↓
+		</b>
 	</font>
 </p>
+<p>
+	<font size=4>
+		アールデバイスオークションストア は、他にも商品を多数出品しています。
+	</font>
+</p>
+<p></p>
 <p>
 	<a href="https://auctions.yahoo.co.jp/seller/waynami?sid=waynami&auccat=2084039792&b=1&n=50&slider=undefined">
 		<img src="https://shopping.c.yimg.jp/lib/r-device/auction_store_win.jpg" alt="Windows パソコン">
