--- a/description_2020-06-25_003.html
+++ b/description_2020-06-25_003.html
@@ -39,11 +39,12 @@
 		</u>
 	</font>
 </p>
-
+<br>
+<br>
 <p>
 	連絡、入金の確認が出来ない場合には落札者様都合にてキャンセルさせて頂きます。
 </p>
-
+<br>
 <p>
 	営業時間: 月曜～金曜 10：00～17:00 (土日祝は休業)<br>
 	連絡・発送・お問合せ等は翌営業日より順次ご返信いたします。
@@ -166,7 +167,7 @@
 	お引き取りの場合の商品お取り置き期間は、落札日より10日以内とさせていただきます。<br>
 	取り置きの期日を過ぎますと別途保管料が発生しますのでご注意下さい。<br>
 	<br>
-	営業時間：月曜～金曜 10:00～17:00 (土日祝は休業)<br>
+	営業時間: 月曜～金曜 10:00～17:00 (土日祝は休業)<br>
 	連絡・発送・お問合せ等は翌営業日より順次ご返信いたします。
 </font>
 
@@ -183,10 +184,8 @@
 <font size="2">
 	基本的に入札後の取り消し依頼はお断りしております。<br>
 	ガイドラインに従い、入札は慎重に行っていただけますようお願いいたします。<br>
-	<br>
-	みせいねんのかたは、ほごしゃのひとにせつめいをよんでもらってから、どういをえてにゅうさつしてね<br>
 </font>
-
+<br>
 <br>
 <font size="4" color="#ff0033">
 	<b>
@@ -228,18 +227,13 @@
 <hr>
 <br>
 <p>
-	<font color=#ff0033>
-		<b>
-			↓↓ こちらもご覧下さい ↓↓
-		</b>
-	</font>
-</p>
-<p>
 	<font size=4>
-		アールデバイスオークションストア は、他にも商品を多数出品しています。
+		<a href="https://auctions.yahoo.co.jp/seller/waynami">
+			アールデバイスオークションストア
+		</a>
+		は、この他にも出品しておりますので、宜しければご覧ください。
 	</font>
 </p>
-<p></p>
 <p>
 	<a href="https://auctions.yahoo.co.jp/seller/waynami?sid=waynami&auccat=2084039792&b=1&n=50&slider=undefined">
 		<img src="https://shopping.c.yimg.jp/lib/r-device/auction_store_win.jpg" alt="Windows パソコン">
@@ -247,7 +241,7 @@
 	<a href="https://auctions.yahoo.co.jp/seller/waynami?sid=waynami&auccat=2084039798&b=1&n=50&slider=undefined">
 		<img src="https://shopping.c.yimg.jp/lib/r-device/auction_store_mac.jpg" alt="Apple Macintosh">
 	</a>
-	<a href="https://auctions.yahoo.co.jp/seller/waynami">
-		<img src="https://shopping.c.yimg.jp/lib/r-device/auction_store_top.jpg" alt="アールデバイスオークションストア -トップ">
+	<a href="https://auctions.yahoo.co.jp/seller/waynami?sid=waynami&auccat=26400&b=1&n=50&slider=undefined">
+		<img src="https://shopping.c.yimg.jp/lib/r-device/auction_store_nw.jpg" alt="ネットワーク機器">
 	</a>
 </p>
