共通説明文 編集
全角記号を半角に修正。

--- a/description_2020-06-25_003.html
+++ b/description_2020-06-25_003.html
@@ -46,7 +46,7 @@
 </p>
 <br>
 <p>
-	営業時間: 月曜～金曜 10：00～17:00 (土日祝は休業)<br>
+	営業時間: 月曜～金曜 10:00～17:00 (土日祝は休業)<br>
 	連絡・発送・お問合せ等は翌営業日より順次ご返信いたします。
 </p>
 
@@ -205,7 +205,7 @@
 	<ul>
 		<li>株式会社ウェイサス</li>
 		<li>埼玉公安委員会</li>
-		<li>古物商許可証の番号：第431240034451号</li>
+		<li>古物商許可証の番号: 第431240034451号</li>
 	</ul>
 </font>
 <br>
